src/test/resources/valid_programs/init_stm_simple.notc
void main() {
    int i = 0;
    double d = 2.0;
    string s = "rgfdls";
    bool b = true;
}
