src/test/resources/syntax_errors/reserved_word_as_var2.notc
void main() {
    bool bool = true;
}
